namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-interventions-dev-two/06-service-monitor.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-prometheus-scraping
  namespace: hmpps-interventions-dev-two
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              component: monitoring
